# pe-explorer

./: .gitignore  README.md  eval.py  pyproject.toml  requirements-cuda.txt  requirements.txt  train.py
configs/: config.yaml  data_generation.yaml  model_sizes.yaml  pe_variants.yaml
docs/: eval.md
scripts/: download_data.py  prepare_data.py  run_sweep.sh  scale_hyperparams.py
src/: __init__.py
src/data/: __init__.py  dataset.py  generate_algorithmic.py  prepare_algorithmic.py  prepare_eval_data.py  prepare_fineweb.py  tokenization.py
src/encodings/: __init__.py  base.py  binary.py  decimal.py  none.py  rope.py  sinonly.py  sinusoidal.py
src/evaluation/: __init__.py  base.py  eval_algorithmic.py  eval_niah.py  eval_passkey.py  eval_ppl.py
src/model/: __init__.py  attention.py  block.py  config.py  mlp.py  rmsnorm.py  transformer.py
src/training/: trainer.py  wandb_manager.py
sweeps/: README.md  tiny_hyperparams.yaml
tests/: test_encodings.py  test_model.py  test_training.py  test_wsd.py
