[project]
name = "pos-enc-bench"
version = "0.1.0"
description = "Positional Encoding Benchmark for Transformers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy",
    "tiktoken",
    "datasets",
    "wandb",
    "tqdm",
    "pyyaml",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
