[project]
name = "pe-explorer"
version = "0.1.0"
description = "Empirical exploration of positional encoding methods in transformers"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "torchdata>=0.7.0",
    "numpy",
    "tiktoken",
    "datasets",
    "wandb",
    "tqdm",
    "pyyaml",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
